Fix typo in Service Locator.

--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -112,7 +112,7 @@ it).</p>
 <p>A <strong>service</strong> class defines an abstract interface to a set of
 operations. A concrete <strong>service provider</strong> implements this interface.
 A separate <strong>service locator</strong> provides access to the service by
-finding an appropriate provider while hiding from both the provider&#x2019;s
+finding an appropriate provider while hiding both the provider&#x2019;s
 concrete type and the process used to locate it.</p>
 <h2><a href="#when-to-use-it" name="when-to-use-it">When to Use It</a></h2>
 <p>If a large number of places in the codebase need access to the same
