Stash context param notes.

--- a/html/context-parameter.html
+++ b/html/context-parameter.html
@@ -61,97 +61,7 @@
     </tr>
   </table>
 </div>
-<h2><a href="#intent" name="intent">Intent</a></h2>
-<p><em>one sentence</em></p>
-<h2><a href="#motivation" name="motivation">Motivation</a></h2>
-<ul>
-<li>key principle of oop design is controlling access to state</li>
-<li>since most behavior is instance methods, if you control access to an instance, control access to behavior too.</li>
-<li>lot of programming is about not writing code that does the wrong thing</li>
-<li>
-<p>by carefully controlling which objects a piece of code can get to, can ensure
-  can&#x2019;t do the wrong thing</p>
-</li>
-<li>
-<p>flip side of coin is that in order for code to do what it does need to do,
-  needs access to objects</p>
-</li>
-<li>if a method needs some object, has couple of options</li>
-<li>can create one itself</li>
-<li>can make it global or a singleton</li>
-<li>can make it a field</li>
-<li>
-<p>can pass it in as an arg</p>
-</li>
-<li>
-<p>creating one doesn&#x2019;t always work. often need some pre-existing object that&#x2019;s
-  already wired up with rest of program [ex&hellip;]</p>
-</li>
-<li>don&#x2019;t make it global. read singleton chapter and come back.</li>
-<li>
-<p>leaves two options, making it a field, and passing it in</p>
-</li>
-<li>
-<p>making it a field is heavyweight</p>
-</li>
-<li>makes each object bigger</li>
-<li>have to make sure have access to object when you create it</li>
-<li>
-<p>if it can change, have to make sure you change it at the right time</p>
-</li>
-<li>
-<p>for things that don&#x2019;t conceptually feel like part of object, really prefer
-  not to make a field for it. if it&#x2019;s just a thing it <em>uses</em> or <em>needs</em>, think
-  arg is better fit</p>
-</li>
-<li>
-<p>(one exception is a "parent" field. when have one object that owns other,
-  often helpful for child to be able to get back to parent.)</p>
-</li>
-<li>
-<p>this chapter is about one flavor of object that often need that you can avoid
-  making a field for.</p>
-</li>
-<li>
-<p>as name implies, it&#x2019;s about parameters that provide some larger "context" a method needs.</p>
-</li>
-<li>
-<p>[example&hellip;]</p>
-</li>
-<li>
-<p>for all that setup, this is a very small, simple, pattern.</p>
-</li>
-<li>won&#x2019;t blow your mind</li>
-<li>probably already using it, often with name "context"</li>
-<li>but i think it&#x2019;s helpful to write stuff like this down</li>
-<li>helps crystallize thinking about it</li>
-<li>makes it easier to be deliberate about using it</li>
-</ul>
-<h2><a href="#the-pattern" name="the-pattern">The Pattern</a></h2>
-<p>one para with <strong>some bold stuff</strong></p>
-<h2><a href="#when-to-use-it" name="when-to-use-it">When to Use It</a></h2>
-<p>few paras</p>
-<h2><a href="#keep-in-mind" name="keep-in-mind">Keep in Mind</a></h2>
-<h3><a href="#this-is-a-thing-to-keep-in-mind" name="this-is-a-thing-to-keep-in-mind">This is a thing to keep in mind</a></h3>
-<p>few paras, then repeat for sections</p>
-<h2><a href="#sample-code" name="sample-code">Sample Code</a></h2>
-<p>[show class that has method that takes context param, and surrounding code that invokes it. probably rendering engine.]</p>
-<h2><a href="#design-decisions" name="design-decisions">Design Decisions</a></h2>
-<p>intro</p>
-<h3><a href="#a-question" name="a-question">A question?</a></h3>
-<p>intro</p>
-<ul>
-<li>
-<p><strong>Option 1:</strong></p>
-<ul>
-<li><em>Point.</em> sentences</li>
-</ul>
-</li>
-</ul>
-<h2><a href="#see-also" name="see-also">See Also</a></h2>
-<ul>
-<li>bullets</li>
-</ul>
+<p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
